--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Home Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-
+  
   <nav class="p-3 text-bg-dark" >
     <div class="nav-brand">
       <img src="images/logo_200x200.png"  width="100" height="100" class="d-inline-block align-top" alt="logo" ><h1>The Himalayan Society</h1>
@@ -35,7 +35,7 @@
               
                 <div>
                   <a href="google.com" class="btn btn-warning btn-sm active" role="button" aria-pressed="true">Log In</a>
-                  <a href="google.com" class="btn btn-warning btn-sm active" role="button" aria-pressed="true">Sign Up</a>
+                  <a href="registration.html" class="btn btn-warning btn-sm active" role="button" aria-pressed="true">Sign Up</a>
                 </div>
               
                   <form class="d-flex" role="search">
