added login page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
               
                 <div>
-                  <a href="google.com" class="btn btn-warning btn-sm active" role="button" aria-pressed="true">Log In</a>
+                  <a href="login.html" class="btn btn-warning btn-sm active" role="button" aria-pressed="true">Log In</a>
                   <a href="registration.html" class="btn btn-warning btn-sm active" role="button" aria-pressed="true">Sign Up</a>
                 </div>
               
@@ -57,7 +57,7 @@
 </head> 
 
 <body>
-  <div class="container">
+  <div class="container p-5">
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
