added product page

--- a/registration.html
+++ b/registration.html
@@ -51,7 +51,7 @@
                 <a
                   class="nav-link active text-light"
                   aria-current="page"
-                  href=""
+                  href="product.html"
                   >Product</a
                 >
               </li>
