--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-light" aria-current="page" href="">Product</a>
+                    <a class="nav-link active text-light" aria-current="page" href="product.html">Product</a>
                   </li>  
                 </ul>
               
@@ -61,7 +61,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/21564617904_47518cef29_b.jpeg" class="d-block w-75" alt="1st image">
+          <img src="images/puppets.jpeg" class="d-block w-75" alt="1st image">
         </div>
         <div class="carousel-item">
           <img src="images/shaouraav-shreshtha-_P5SJb7WJQY-unsplash.jpg" class="d-block w-75" alt="2nd image">
