--- a/checkout.html
+++ b/checkout.html
@@ -9,8 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    
+
     <div class="checkout-bg" style="background-image: url('images/bharath-g-s-aLGiPJ4XRO4-unsplash.jpg');
-    height: 100%" ;>
+    height:100%">
         <div class="container-fluid">
             <a class="logo-home" href="index.html">
                 <img src="images/logo_200x200.png" width="80" height="80" alt="logo image">
@@ -60,13 +64,6 @@
             </nav>
 
         </div>
-
-
-</head>
-
-<body>
-
-
     <div class="container p-5">
         <h2><u>Checkout</u></h2>
 
@@ -255,7 +252,7 @@
         </footer>
     </div>
     </div>
-    </div>
+ 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
