--- a/product.html
+++ b/product.html
@@ -9,7 +9,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+</head>
 
+<body>
   <div class="container-fluid">
     <a class="logo-home" href="index.html">
       <img src="images/logo_200x200.png" width="80" height="80" alt="logo image">
@@ -17,9 +19,7 @@
     <h1><b>The Himalayan Society</b></h1>
     <div class="navigation">
       <nav class="p-3 bg-dark">
-
         <nav class="navbar navbar-expand-md">
-
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -52,22 +52,18 @@
             <a href="checkout.html" class="btn" role="button" aria-pressed="true"><img src="images/cart.png"
                 alt="checkout" height="40"></a>
           </div>
-
-
+        </nav>
+      </nav>
     </div>
-    </nav>
-    </nav>
   </div>
 
-</head>
-
-<body>
-  <div class="product-bg" style="background-image: url('images/tomas-m-thjJIoJhMv4-unsplash.jpg');
-    height: 100%" ;>
+  <div class="product-bg" style="
+        background-image: url('images/tomas-m-thjJIoJhMv4-unsplash.jpg');
+        height: 100%;
+      ">
     <div class="row row-cols-1 row-cols-md-3 p-5">
       <div class="col mb-4">
         <div class="card h-100">
-
           <div class="view overlay">
             <img class="card-img-top" src="images/nepalese-necklace-shutterstock_1177819729_89e803332f.jpeg"
               alt="Card image cap">
@@ -76,27 +72,29 @@
             </a>
           </div>
 
-
           <div class="card-body">
+            <h4 class="card-title">
+              Nepalese Stone, Turquoise And Gem Necklace
+            </h4>
 
+            <p class="card-text">
+              Our hand crafted sustainable turquoise necklaces have been made
+              in Kathmandu Nepal for centuries. The heritage of this stunning
+              jewelry is found in modern day Nepal, Tibet, Bhutan & Northern
+              India. Sourced from the gems of the Himalayan mountains, in this
+              culture everything keeps you connected with the mystical
+              mountains of the Himalayas. Stand out from the others with
+              something truely unique!
+            </p>
 
-            <h4 class="card-title">Nepalese Stone, Turquoise And Gem Necklace</h4>
-
-            <p class="card-text">Our hand crafted sustainable turquoise necklaces have been made in Kathmandu Nepal for
-              centuries. The heritage of this stunning jewelry is found in modern day Nepal, Tibet, Bhutan & Northern
-              India. Sourced from the gems of the Himalayan mountains, in this culture everything keeps you connected
-              with the mystical mountains of the Himalayas. Stand out from the others with something truely unique!</p>
-
-            <button type="button" class="btn btn-primary btn-md">Add to cart</button>
-
+            <button type="button" class="btn btn-primary btn-md">
+              Add to cart
+            </button>
           </div>
-
         </div>
-
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-
           <div class="view overlay">
             <img class="card-img-top" src="images/earrings.jpeg" alt="Card image cap">
             <a href="#!">
@@ -104,25 +102,24 @@
             </a>
           </div>
 
-
           <div class="card-body">
+            <h4 class="card-title">
+              Nepalese Jewelry, two sterling stamped silver turquoise earings
+            </h4>
 
+            <p class="card-text">
+              This 925 Silver Mosaic earing is purely handmade and natural
+              freshwater Pearl, Turquoise and Coral are used.
+            </p>
 
-            <h4 class="card-title">Nepalese Jewelry, two sterling stamped silver turquoise earings</h4>
-
-            <p class="card-text">This 925 Silver Mosaic earing is purely handmade and natural freshwater Pearl,
-              Turquoise and Coral are used.</p>
-
-            <button type="button" class=" btn btn-primary btn-md">Add to cart</button>
-
+            <button type="button" class="btn btn-primary btn-md">
+              Add to cart
+            </button>
           </div>
-
         </div>
-
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-
           <div class="view overlay">
             <img class="card-img-top" src="images/nepalnecklace-nepal.jpeg" alt="Card image cap">
             <a href="#!">
@@ -130,25 +127,24 @@
             </a>
           </div>
 
-
           <div class="card-body">
+            <h4 class="card-title">
+              Beautiful Turquoise Handmade Necklace Nepali Jewelry Necklace
+            </h4>
 
+            <p class="card-text">
+              Hand made sterling silver with turquoise stone. Antique design
+              with great looking red stones inorporated.
+            </p>
 
-            <h4 class="card-title">Beautiful Turquoise Handmade Necklace Nepali Jewelry Necklace</h4>
-
-            <p class="card-text">Hand made sterling silver with turquoise stone. Antique design with great looking red
-              stones inorporated.</p>
-
-            <button type="button" class="btn btn-primary btn-md">Add to cart</button>
-
+            <button type="button" class="btn btn-primary btn-md">
+              Add to cart
+            </button>
           </div>
-
         </div>
-
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-
           <div class="view overlay">
             <img class="card-img-top"
               src="images/decorative-gurkha-khukuri-nepali-coin_1_b82fcea73ac6bf7c4ea9b321c0e6783a.jpeg"
@@ -158,56 +154,52 @@
             </a>
           </div>
 
-
           <div class="card-body">
-
-
             <h4 class="card-title">Khukuri Handmade</h4>
 
-            <p class="card-text">This is 11 inch Hanshee Balalnce Khukuri. This is a semi-polished full tang-blade with
-              a handle made of rosewood. This khukuri is strong and sharp with unique craftsmanship and with a beautiful
-              patterned brown buffalo leather scabbard. This kukri can be used for cutting wood, meat, clearing the
-              branches and bushes besides defense use. This Khukuri can be a useful working tool as well as an excellent
-              present for decoration.</p>
+            <p class="card-text">
+              This is 11 inch Hanshee Balalnce Khukuri. This is a
+              semi-polished full tang-blade with a handle made of rosewood.
+              This khukuri is strong and sharp with unique craftsmanship and
+              with a beautiful patterned brown buffalo leather scabbard. This
+              kukri can be used for cutting wood, meat, clearing the branches
+              and bushes besides defense use. This Khukuri can be a useful
+              working tool as well as an excellent present for decoration.
+            </p>
 
-            <button type="button" class="btn btn-primary btn-md">Add to cart</button>
-
+            <button type="button" class="btn btn-primary btn-md">
+              Add to cart
+            </button>
           </div>
-
         </div>
-
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-
           <div class="view overlay">
-            <img class="card-img-top" src="images/prayer wheel.webp" alt="Card image cap">
+            <img class="card-img-top" src="images/prayer-wheel.webp" alt="Card image cap">
             <a href="#!">
               <div class="mask rgba-white-slight"></div>
             </a>
           </div>
 
-
           <div class="card-body">
-
-
             <h4 class="card-title">Buddhist Prayer Wheel</h4>
 
-            <p class="card-text">Beautiful Handmade Spinning Prayer Triple Wheel Wall Hanging design
-              Buddhism Tibetan "Om Mane Padme Hum" Mantra spinning Prayer Wheel, made with brass, copper, tin alloy, &
-              wood.
-              Made in Nepal..</p>
+            <p class="card-text">
+              Beautiful Handmade Spinning Prayer Triple Wheel Wall Hanging
+              design Buddhism Tibetan "Om Mane Padme Hum" Mantra spinning
+              Prayer Wheel, made with brass, copper, tin alloy, & wood. Made
+              in Nepal..
+            </p>
 
-            <button type="button" class="btn btn-primary btn-md">Add to cart</button>
-
+            <button type="button" class="btn btn-primary btn-md">
+              Add to cart
+            </button>
           </div>
-
         </div>
-
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-
           <div class="view overlay">
             <img class="card-img-top" src="images/bowl.webp" alt="Card image cap">
             <a href="#!">
@@ -215,29 +207,29 @@
             </a>
           </div>
 
-
           <div class="card-body">
-
-
-            <h4 class="card-title">Singing Bowls Set Meditation Sound Bowl for Yoga, Meditation and Spiritual Healing.
+            <h4 class="card-title">
+              Singing Bowls Set Meditation Sound Bowl for Yoga, Meditation and
+              Spiritual Healing.
             </h4>
 
-            <p class="card-text">Hand Made by Local Artisans: Singing Bowls from Himalayan Healing are hand-hammered in
-              the foothills of Nepal by local artisans. They possess special skills and experiences to give a perfect
-              physical shape to such bowls. After all, the artisans are decided to create something that is as distinct
-              as you are.</p>
+            <p class="card-text">
+              Hand Made by Local Artisans: Singing Bowls from Himalayan
+              Healing are hand-hammered in the foothills of Nepal by local
+              artisans. They possess special skills and experiences to give a
+              perfect physical shape to such bowls. After all, the artisans
+              are decided to create something that is as distinct as you are.
+            </p>
 
-            <button type="button" class="btn btn-primary btn-md">Add to cart</button>
-
+            <button type="button" class="btn btn-primary btn-md">
+              Add to cart
+            </button>
           </div>
-
         </div>
-
       </div>
 
       <div class="col mb-4">
         <div class="card h-100">
-
           <div class="view overlay">
             <img class="card-img-top" src="images/buddha.webp" alt="Card image cap">
             <a href="#!">
@@ -245,60 +237,61 @@
             </a>
           </div>
 
-
           <div class="card-body">
-
-
             <h4 class="card-title">Buddha Statue</h4>
 
-            <p class="card-text">8 inch brass buddha statue. Buddha Shakyamuni statue is hand-carved and seated in a
-              meditative position. The Tibetan sculpture art portrays his legs are crossed, and his right hand is palm
-              up in his lap in the lotus pose. He touches the earth with the fingertips of his left hand, a gesture that
-              relates to his summoning of the Earth Goddess in response to the demon Mara's attempts to break his
-              meditation. Shakyamuni requested that the goddess bear witness to his right to enlightenment, which she
-              did, allowing him to defeat his foe and gain Buddhahood.
+            <p class="card-text">
+              8 inch brass buddha statue. Buddha Shakyamuni statue is
+              hand-carved and seated in a meditative position. The Tibetan
+              sculpture art portrays his legs are crossed, and his right hand
+              is palm up in his lap in the lotus pose. He touches the earth
+              with the fingertips of his left hand, a gesture that relates to
+              his summoning of the Earth Goddess in response to the demon
+              Mara's attempts to break his meditation. Shakyamuni requested
+              that the goddess bear witness to his right to enlightenment,
+              which she did, allowing him to defeat his foe and gain
+              Buddhahood.
             </p>
 
-            <button type="button" class="btn btn-primary btn-md">Add to cart</button>
-
+            <button type="button" class="btn btn-primary btn-md">
+              Add to cart
+            </button>
           </div>
-
         </div>
-
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-
           <div class="view overlay">
-            <img class="card-img-top" src="images/prayer flag.webp" alt="Card image cap">
+            <img class="card-img-top" src="images/prayer-flag.webp" alt="Card image cap">
             <a href="#!">
               <div class="mask rgba-white-slight"></div>
             </a>
           </div>
 
-
           <div class="card-body">
-
-
             <h4 class="card-title">Tibetan Prayer Flags</h4>
 
-            <p class="card-text">String of ten printed cloth prayer flags. The practice of hanging prayer flags goes
-              back thousands of years to the Bon tradition which pre-dates Buddhism. It was a shamanic medicinal
-              practice to help bring balance to the ancient elements that the colours of the flags represent. It is said
-              that this balance can be achieved both internally, bringing health to mind and body, and externally by
-              bringing harmony to the environment. In fact the Tibetan word for prayer flags is Dar Cho, “Dar” means to
-              increase life, fortune, health and wealth. “Cho” means all sentient beings.</p>
+            <p class="card-text">
+              String of ten printed cloth prayer flags. The practice of
+              hanging prayer flags goes back thousands of years to the Bon
+              tradition which pre-dates Buddhism. It was a shamanic medicinal
+              practice to help bring balance to the ancient elements that the
+              colours of the flags represent. It is said that this balance can
+              be achieved both internally, bringing health to mind and body,
+              and externally by bringing harmony to the environment. In fact
+              the Tibetan word for prayer flags is Dar Cho, “Dar” means to
+              increase life, fortune, health and wealth. “Cho” means all
+              sentient beings.
+            </p>
 
-            <button type="button" class="btn btn-primary btn-md">Add to cart</button>
-
+            <button type="button" class="btn btn-primary btn-md">
+              Add to cart
+            </button>
           </div>
-
         </div>
-
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-
           <div class="view overlay">
             <img class="card-img-top" src="images/il_794xN.3994942965_kmo1.webp" alt="Card image cap">
             <a href="#!">
@@ -306,29 +299,34 @@
             </a>
           </div>
 
-
           <div class="card-body">
+            <h4 class="card-title">
+              Silk Brocade Vajrasattva Thangka, Blessed Thanka, Painting on
+              Cotton Canvas
+            </h4>
 
+            <p class="card-text">
+              This is a hand-painted Vajrasattva Thangka painting. The
+              Vajrasattva is one of the sixth Dhyani Buddha, the Buddha of
+              purification. The Vajrasattva thangkas are used in meditation
+              and devotional practices in the Buddhist tradition.
+            </p>
 
-            <h4 class="card-title">Silk Brocade Vajrasattva Thangka, Blessed Thanka, Painting on Cotton Canvas</h4>
-
-            <p class="card-text">This is a hand-painted Vajrasattva Thangka painting. The Vajrasattva is one of the
-              sixth Dhyani Buddha, the Buddha of purification. The Vajrasattva thangkas are used in meditation and
-              devotional practices in the Buddhist tradition.</p>
-
-            <button type="button" class="btn btn-primary btn-md">Add to cart</button>
-
+            <button type="button" class="btn btn-primary btn-md">
+              Add to cart
+            </button>
           </div>
-
         </div>
-
       </div>
     </div>
   </div>
 
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>© 2020–2022 Himalayan Society, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+    <p>
+      © 2020–2022 Himalayan Society, Inc. · <a href="#">Privacy</a> ·
+      <a href="#">Terms</a>
+    </p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
