--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                   <h4>Products</h4>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active text-light" aria-current="page" href="contact.html">
+                  <h4>Contact</h4>
+                </a>
+              </li>
             </ul>
 
             <div>
@@ -201,7 +206,7 @@
 
   <footer class="container">
     <div class="float-end"><a href="#">Back to top</a></div>
-    <div>© 2020–2022 Himalayan Society, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></div>
+    <div>© 2020–2022 Himalayan Society, Inc. · <a href="">Privacy</a> · <a href="#">Terms</a></div>
   </footer>
 </div>
 
