--- a/login.html
+++ b/login.html
@@ -70,6 +70,11 @@
                   <h4>Products</h4>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active text-light" aria-current="page" href="contact.html">
+                  <h4>Contact</h4>
+                </a>
+              </li>
             </ul>
 
             <div>
@@ -150,7 +155,14 @@
                   </button>
                 </div>
 
-                <p class="small mb-5 pb-lg-2">
+                <div class="form-check p-4">
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                  <label class="form-check-label" for="flexCheckDefault">
+                    Remember me
+                  </label>
+                </div>
+
+                <p class="small mb-5 pb-lg-2 p-2">
                   <a class="text-muted" href="#!">Forgot password?</a>
                 </p>
                 <p>
