--- a/product.html
+++ b/product.html
@@ -37,6 +37,11 @@
                   <h4>Products</h4>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active text-light" aria-current="page" href="contact.html">
+                  <h4>Contact</h4>
+                </a>
+              </li>
             </ul>
 
             <div>
