--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             we strive to satisfy and delight our customers.</h4></div>
         </div>
         <div class="col-md-5">
-          <div class="img-fluid">
-            <img src="images/nepal.jpeg" height="400" width="500" class="d-block w-100" alt="history image">
+          <div class="img-fluid ">
+            <img src="images/nepal.jpeg" height="400" width="500" class="d-block w-100 rounded-circle" alt="history image" >
           </div>
         </div>
 
@@ -171,10 +171,10 @@
             of Nepalese craftsmen, artisans, promoters and businessmen generating revenue to government.</h4>
           </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 ">
           <div class="img-fluid">
 
-            <img src="images/Bamboo-and-wooden-products.jpeg" height="400" width="500" class="d-block w-100"
+            <img src="images/Bamboo-and-wooden-products.jpeg"  height="400" width="500" class="d-block w-100 rounded-circle"
               alt="history image">
           </div>
         </div>
