--- a/product.html
+++ b/product.html
@@ -57,7 +57,7 @@
         background-image: url('images/tomas-m-thjJIoJhMv4-unsplash.jpg');
         height: 100%;
       ">
-    <div class="row row-cols-1 row-cols-md-3 p-5">
+    <div class="row row-cols-1 row-cols-lg-3 p-5">
       <div class="col mb-4">
         <div class="card h-100">
           <div class="view overlay">
@@ -82,7 +82,7 @@
               mountains of the Himalayas. Stand out from the others with
               something truely unique!
             </p>
-            <h4>$60</h4>
+            <h4>$80</h4>
 
             <button type="button" class="btn btn-primary btn-md">
               Add to cart
@@ -108,7 +108,7 @@
               This 925 Silver Mosaic earing is purely handmade and natural
               freshwater Pearl, Turquoise and Coral are used.
             </p>
-            <h4>$20</h4>
+            <h4>$40</h4>
 
             <button type="button" class="btn btn-primary btn-md">
               Add to cart
@@ -135,7 +135,7 @@
               with great looking red stones inorporated.
             </p>
 
-            <h4>$50</h4>
+            <h4>$60</h4>
 
             <button type="button" class="btn btn-primary btn-md">
               Add to cart
@@ -166,7 +166,7 @@
               and bushes besides defense use. This Khukuri can be a useful
               working tool as well as an excellent present for decoration.
             </p>
-            <h4>$40</h4>
+            <h4>$50</h4>
 
             <button type="button" class="btn btn-primary btn-md">
               Add to cart
@@ -193,7 +193,7 @@
               in Nepal..
             </p>
 
-            <h4>$20</h4>
+            <h4>$40</h4>
 
             <button type="button" class="btn btn-primary btn-md">
               Add to cart
@@ -223,7 +223,7 @@
               perfect physical shape to such bowls. After all, the artisans
               are decided to create something that is as distinct as you are.
             </p>
-            <h4>$20</h4>
+            <h4>$50</h4>
 
             <button type="button" class="btn btn-primary btn-md">
               Add to cart
@@ -256,7 +256,7 @@
               which she did, allowing him to defeat his foe and gain
               Buddhahood.
             </p>
-            <h4>$45</h4>
+            <h4>$65</h4>
 
             <button type="button" class="btn btn-primary btn-md">
               Add to cart
@@ -288,7 +288,7 @@
               increase life, fortune, health and wealth. “Cho” means all
               sentient beings.
             </p>
-            <h4>$10</h4>
+            <h4>$25</h4>
 
             <button type="button" class="btn btn-primary btn-md">
               Add to cart
