--- a/checkout.html
+++ b/checkout.html
@@ -58,16 +58,16 @@
     height: 100%;
   ">
 
-    
+   
        
     <div class="container pt-5 mt-5">
         <h2><u>Checkout</u></h2>
 
         <div class="row">
             <div class="col-md-4 order-md-2 mb-4">
-                <h4 class="d-flex justify-content-between align-items-center mb-3">
+                <h4 class="d-flex justify-content-between align-items-center mb-3 ">
                     <span class="text-muted">Your cart</span>
-                    <span class="badge badge-secondary badge-pill">3</span>
+                    <span class="badge badge-secondary badge-pill text-black-50">3</span>
                 </h4>
                 <ul class="list-group mb-3 sticky-top">
                     <li class="list-group-item d-flex justify-content-between lh-condensed">
