--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
               </ul>
               <ul class="navbar-nav ml-auto" >
                 <li class="nav-item" >
-                  <a class="nav-link  px-3" href="login.html"><h5>Log in</h5></a>
+                  <a class="nav-link" href="login.html"><h5>Log in</h5></a>
                 </li>
                 <li class="nav-item" >
                   <a class="nav-link" href="registration.html"><h5>Sign Up</h5></a>
@@ -52,7 +52,7 @@
 
     <div class="product-bg p-5" style="
     background-image: url('images/bharath-g-s-aLGiPJ4XRO4-unsplash.jpg');
-    height: 100%;
+    height: 100vh;
   ">
 
     <div class="form pt-5">
