--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container d-flex justify-content-center align-items-center h-100">
           <div class="row-1 align-items-center">
             <div class="col-12">
-              <h2 class="mb-0 text-white display-1 text-center p-5;">The Himalayan Society</h2>
+              <h2 class="mb-0 text-white display-1 text-center p-5 img-fluid">The Himalayan Society</h2>
             </div>
           </div>
         </div>
@@ -153,8 +153,7 @@
         <div class="col-md-7 order-md-2">
           <h1 class="featurette-heading fw-normal lh-1 text-center"><u>
               About Us </u></h1>
-          <div class="lead text-white"><h4> Himalayan society is an online market for Nepalese handicrafts bringing you a pleasant online  shopping
-            experience with; carefully selected Nepalese handicrafts, speed delivery, easy-to-navigate, unbiased website
+          <div class="lead text-white"><h4> Himalayan society is an online market for Nepalese handicrafts bringing you a pleasant online  shopping experience with carefully selected Nepalese handicrafts, speed delivery, easy-to-navigate, unbiased website
             reviews, and highlighted time and money-saving deals.The Himalayan society selects and places products
             carefully to give you a large selection of Nepalese Handicrafts at competitive and affordable prices. We
             have the wholesale option too so that anybody who wish to order in bulk can order. We are working to improve
